kube-control-tower.yaml
apiVersion: v1
kind: Service
metadata:
 labels:
   name: control-tower
 name: control-tower
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9000
  selector:
    name: control-tower

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: control-tower
  name: control-tower
spec:
  template:
    metadata:
      labels:
        name: control-tower
    spec:
      containers:
      - name: control-tower
        image: rrequero/control-tower:1.0.1
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        args:
          - develop
        ports:
          - containerPort: 9000
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 15

      restartPolicy: Always
